# pixtudio

./: .gitignore  COPYING  README.md  client.c  server.py
core/: .clang-format  Makefile  clean
core/bgdc/: Makefile  Makefile.linux
core/bgdi/: Makefile  Makefile.SDL12.linux  Makefile.iOSSimulator  Makefile.linux  Makefile.psp
core/bgdrtm/: Makefile  Makefile.SDL12.linux  Makefile.linux
core/common/: b_crypt.c  debug.c  debug.d  files.c  files.d  xctype.c  xctype.d
core/include/: arrange.h  b_crypt.h  bgdcore.h  bgddl.h  commons_defs.h  dcb.h  dirs.h  dlvaracc.h  files.h  files_st.h  fmath.h  i_procdef.h  i_procdef_st.h  instance.h  instance_st.h  loadlib.h  monolithic_includes.h  offsets.h  pslang.h  pxtdl.h  sysprocs.h  sysprocs_st.h  typedef.h  typedef_st.h  varspace_file.h  xctype.h  xctype_st.h  xstrings.h
docs/web/: .htaccess  index.html  index.php  main.css
examples/: 01_scroll_bigmap.prg  01_scroll_performance.prg  02_collision_graph.prg  03_mod_sound.prg  04_mod_gamecontroller.prg  05_mod_theora.prg  06_blending_modes.prg  07_mod_regex.prg  08_mod_curl.prg  09_colormod.prg  10_moddir.prg  11_messagebox.prg  12_scale_quality.prg  13_file_writing.prg  14_mod_file.prg  14_mod_paths.prg  14_path_components.prg  15_rouding.prg  16_webserver.prg  17a_server.prg  17b_client.prg  18_mod_text_flags.prg  19_mod_text_freetype.prg  20_mod_steam.prg  21_glyph_get.prg  22_ttf_family_style.prg  23_jpg_support.prg  24_webp_lossless_support.prg  24_webp_lossy_support.prg  cancion.txt  font.fnt  game.s3m  main_tre.c
examples/64bit/: 01_memcopy.prg  02_alloc.prg
examples/android/: 01_mod_wm.prg  02_mod_key.prg  03_mod_regex.prg  04_scale_resolution.prg  04b_scale_resolution_touch_location.prg
examples/fpg/: graf2.fpg
examples/ttf/: COPYING_DejaVuSans.txt
examples/wii/: 01_core.prg  02_mod_say.prg  03_mod_string.prg  05_mod_time.prg  06_mod_file.prg  06_mod_file_2.prg  06_mod_file_3.prg  07_mod_sound.prg  08_mod_joy.prg  08_mod_joy_2.prg  09_mod_proc.prg  09_mod_proc_lite.prg  10_mod_sort.prg  11_mod_timers.prg  12_libgrbase.prg  13_libblit.prg  14_libvideo.prg  15_librender.prg  16_mod_video.prg  17_mod_mouse.prg  18_mod_map.prg  19_mod_text.prg  20_mod_grproc.prg  20_mod_grproc_2.prg  21_mod_regex.prg  22_mod_draw.prg  22_mod_draw_2.prg  22_mod_draw_3.prg  23_mod_screen.prg  24_mod_key.prg  25_mod_wpad.prg  25_mod_wpad_2.prg  25_mod_wpad_3.prg  26_mod_m7.prg  27_mod_sys.prg  28_mod_iconv.prg  29_mod_image.prg  30_mod_dir.prg  31_mod_sqlite3.prg  32_mod_chipmunk.prg  (+1 more)
goodies/: DCBextract.py  reformat_code.sh
modules/: .clang-format
modules/libbgload/: bgload.c  bgload.d  bgload.h
modules/libblit/: g_blit.c  g_blit.d  g_blit.h  g_blitflags.h  g_pixel.c  g_pixel.d  g_pixel.h  libblit.c  libblit.d  libblit.h  libblit_symbols.h
modules/libdraw/: libdraw.c  libdraw.d  libdraw.h
modules/libfont/: libfont.c  libfont.d  libfont.h  libfont_symbols.h  systemfont.h
modules/libgrbase/: bitwise_map.h  g_bitmap.c  g_bitmap.d  g_bitmap.h  g_blendop.c  g_blendop.d  g_blendop.h  g_clear.c  g_clear.d  g_clear.h  g_conversion.c  g_conversion.d  g_conversion.h  g_grlib.c  g_grlib.d  g_grlib.h  g_pal.c  g_pal.d  g_pal.h  g_region.h  libgrbase.c  libgrbase.d  libgrbase.h  libgrbase_symbols.h  resolution.h
modules/libjoy/: libjoy.c  libjoy.d  libjoy.h  libjoy_symbols.h
modules/libkey/: key_stats.h  libkey.c  libkey.d  libkey.h  libkey_symbols.h
modules/libmouse/: libmouse.c  libmouse.d  libmouse_symbols.h
modules/librender/: g_fade.c  g_fade.d  g_fade.h  g_frame.c  g_frame.d  g_frame.h  g_instance.c  g_instance.d  g_instance.h  g_object.c  g_object.d  g_object.h  g_rects.c  g_rects.d  g_rects.h  g_screen.c  g_screen.d  g_screen.h  g_shaders.c  g_shaders.h  librender.c  librender.d  librender.h  librender_constants.h  librender_symbols.h
modules/libscroll/: libscroll.c  libscroll.d  libscroll.h  libscroll_constants.h  libscroll_symbols.h
modules/libsdlhandler/: libsdlhandler.c  libsdlhandler.d  libsdlhandler_symbols.h
modules/libsocket/: libsocket.c  libsocket.h
modules/libtext/: libtext.c  libtext.d  libtext.h  libtext_symbols.h
modules/libvideo/: g_regions.c  g_regions.d  g_regions.h  g_video.c  g_video.d  g_video.h  g_video_constants.h  libvideo.h  libvideo_symbols.h
modules/libwm/: libwm.c  libwm.d  libwm_symbols.h
modules/mod_audio/: Audio.cpp  Audio.h  Source.cpp  Source.h  wrap_Audio.cpp  wrap_Audio.h  wrap_Source.cpp  wrap_Source.h
modules/mod_blendop/: mod_blendop.c  mod_blendop.d  mod_blendop_symbols.h
modules/mod_cd/: mod_cd.c  mod_cd_symbols.h
modules/mod_chipmunk/: Arreglos.c  Arreglos.h  Chipmunk.depend  Constraints.c  Constraints.h  Cuerpo.c  Cuerpo.h  Espacio.c  Espacio.h  Handlers.c  Handlers.h  How to compile.txt  LL.c  LL.h  Miscelanea.c  Miscelanea.h  TODO.txt  agua.c  agua.h  arbitros.c  arbitros.h  automGenTerr.c  automGenTerr.h  cambiaColores.c  constantes.h  convexHull.c  convexHull.h  estructuras.h  fft.c  globales.h  inl.h  iteradores de shapes y constraints.prg  locales.h  main.c  mod_chipmunk_symbols.h
modules/mod_curl/: mod_curl.c  mod_curl_symbols.h
modules/mod_debug/: mod_debug.c  mod_debug_symbols.h  systexts.c
modules/mod_dir/: mod_dir.c  mod_dir.d  mod_dir_symbols.h
modules/mod_draw/: mod_draw.c  mod_draw.d  mod_draw_symbols.h
modules/mod_effects/: mod_effects.c  mod_effects.d  mod_effects.h  mod_effects_symbols.h
modules/mod_epic/: mod_epic.cpp  mod_epic.h  mod_epic_symbols.h
modules/mod_file/: mod_file.c  mod_file.c.not_compiling  mod_file.d  mod_file_symbols.h  mod_file_symbols.h.not_compiling
modules/mod_flic/: mod_flic.c  mod_flic.d  mod_flic.h  mod_flic_symbols.h
modules/mod_fmodex/: mod_fmodex.c
modules/mod_fsock/: fsock.c  fsock_symbols.h  mod_fsock.c  mod_fsock_symbols.h
modules/mod_gamecontroller/: mod_gamecontroller.c  mod_gamecontroller.h  (+1 more)
projects/cmake/bgdrtm/: CMakeLists.txt
projects/cmake/pxtb/: CMakeLists.txt  pxtb.rc
projects/cmake/pxtp/: CMakeLists.txt  pxtp.rc
projects/cmake/pxtp/bgdrtm/: CMakeLists.txt
projects/cmake/pxtp/pxtrtm/: CMakeLists.txt
(+2523 files in other folders)
